fixed portions of footer still in whitespace and split left and right

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1689,7 +1689,7 @@
 
 	body, input, select, textarea {
 		font-family: "Lato", Arial, Helvetica, sans-serif;
-		font-weight: 200;
+		font-weight: 500;
 		font-size: 1rem;
 		line-height: 1.65;
 	}
